2007-07-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-bspline.c: Kill off some deep pointer
	indirections; use CLUTTER_NOTE() instead of ifdeffed out g_debug();
	add checks in every public entry point; move some initialisations
	of private data structures out of the constructor and into the
	init function, where they belong.

2007-07-25  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-behaviour-rotate.c:
	* clutter/clutter-behaviour-rotate.h:
	Split 'center' prop into 3 seperate props for each axis.
	Use clutter_behaviour_actors_foreach() rather than
	clutter_behaviour_get_actors() to avoid copying list.
	Call fixed point rotation funcs internally.

	* clutter/clutter-effect.c:
	* clutter/clutter-effect.h:
	Add new simple rotation based effect funcs.

2007-07-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter.h: Include clutter-behaviour-depth.h

2007-07-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-rotate.[ch]: Add a center property
	for the center or rotation; implement the set_bounds() methods.

2007-07-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/eglx/clutter-backend-egl.c:
	* clutter/eglnative/clutter-backend-egl.c:
	* clutter/sdl/clutter-backend-sdl.c: Destroy the stage in every
	backend.

2007-07-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/glx/clutter-backend-glx.c: Destroy the stage, don't
	just unref it.

2007-07-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c: Add debug markers.

2007-07-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-texture.[ch]: Add a ClutterTextureError
	to be returned by the loader functions; use the GObject API
	to allocate the private data structure instead of managing it
	ourselves; add documentation.

2007-07-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-box.h:
	* clutter/clutter-stage.c: Documentation fixes.
